fixes to hike blogs

--- a/_posts/2024-08-17-pen-y-fan.md
+++ b/_posts/2024-08-17-pen-y-fan.md
@@ -28,7 +28,7 @@ This gave us some stunning panoramic views.
 
 As we continued towards the peak of Pen Y Fan, the weather worsened again.
 We braved the conditions to finally reach southern Britain’s highest mountain at 886 metres.
-Initially, we had planned to take the [circular route](https://www.breconbeacons.org/blog/pen-y-fan-corn-du-circular-walk), but with limited visibility and the deteriorating weather, we decided against taking any risky detours.
+Initially, we had planned to take the circular route, but with limited visibility and the deteriorating weather, we decided against taking any risky detours.
 Instead, we opted to return the way we came, for a steady but familiar descent.
 
 All in all, it was a short but moderately challenging hike.
