--- a/_posts/2024-10-05-uxbridge.md
+++ b/_posts/2024-10-05-uxbridge.md
@@ -12,7 +12,7 @@ tabs: true
 
 Autumn 2024 is shaping up to be the season of hikes — a great opportunity to explore the more rural parts of London.
 Today, I joined a couple of friends for a hike in Northwest London.
-The [Chess Valley Walk]((https://www.alltrails.com/en-gb/trail/england/hertfordshire/chess-valley-walk)) was our original plan, starting at Rickmansworth tube station and finishing at Chesham.
+The Chess Valley Walk was our original plan, starting at Rickmansworth tube station and finishing at Chesham.
 However, we made the mistake of assuming the tube lines would be fully operational on the weekend.
 Instead, rail replacement buses were running from Northfields.
 So, we quickly switched gears and decided to meet at Uxbridge station, improvising a new route from there.
