swiping images, working

--- a/_posts/2024-08-17-pen-y-fan.md
+++ b/_posts/2024-08-17-pen-y-fan.md
@@ -8,7 +8,13 @@ categories: hikes
 tabs: true
 ---
 
-{% include figure.liquid loading="eager" path="assets/img/hiking/pen_y_fan/1.jpg" class="img-fluid rounded z-depth-1" %} {% include figure.liquid loading="eager" path="assets/img/hiking/pen_y_fan/2.jpg" class="img-fluid rounded z-depth-1" %} {% include figure.liquid loading="eager" path="assets/img/hiking/pen_y_fan/3.jpg" class="img-fluid rounded z-depth-1" %} {% include figure.liquid loading="eager" path="assets/img/hiking/pen_y_fan/4.jpg" class="img-fluid rounded z-depth-1" %} {% include figure.liquid loading="eager" path="assets/img/hiking/pen_y_fan/5.jpg" class="img-fluid rounded z-depth-1" %}
+<swiper-container keyboard="true" navigation="true" pagination="true" pagination-clickable="true" pagination-dynamic-bullets="true" rewind="true">
+  <swiper-slide>{% include figure.liquid loading="eager" path="assets/img/hiking/pen_y_fan/1.jpg" class="img-fluid rounded z-depth-1" %}</swiper-slide>
+  <swiper-slide>{% include figure.liquid loading="eager" path="assets/img/hiking/pen_y_fan/2.jpg" class="img-fluid rounded z-depth-1" %}</swiper-slide>
+  <swiper-slide>{% include figure.liquid loading="eager" path="assets/img/hiking/pen_y_fan/3.jpg" class="img-fluid rounded z-depth-1" %}</swiper-slide>
+  <swiper-slide>{% include figure.liquid loading="eager" path="assets/img/hiking/pen_y_fan/4.jpg" class="img-fluid rounded z-depth-1" %}</swiper-slide>
+  <swiper-slide>{% include figure.liquid loading="eager" path="assets/img/hiking/pen_y_fan/5.jpg" class="img-fluid rounded z-depth-1" %}</swiper-slide>
+</swiper-container>
 
 It was a bright and sunny start to the morning. I set off around 9 AM, making my way from Oxford to South Wales, picking up some friends along the way.
 The weather forecast was uncertain for later in the day, as is typical with British weather.
