--- a/_posts/2024-10-05-uxbridge.md
+++ b/_posts/2024-10-05-uxbridge.md
@@ -1,6 +1,6 @@
 ---
 layout: post
-title: Uxbridge
+title: Uxbridge to Northwood Hills
 date: 2024-10-05 11:00:00
 description:
 tags:
@@ -8,7 +8,13 @@ categories: hikes
 tabs: true
 ---
 
-{% include figure.liquid loading="eager" path="assets/img/hiking/uxbridge/1.jpg" class="img-fluid rounded z-depth-1" %} {% include figure.liquid loading="eager" path="assets/img/hiking/uxbridge/2.jpg" class="img-fluid rounded z-depth-1" %} {% include figure.liquid loading="eager" path="assets/img/hiking/uxbridge/3.jpg" class="img-fluid rounded z-depth-1" %} {% include figure.liquid loading="eager" path="assets/img/hiking/uxbridge/4.jpg" class="img-fluid rounded z-depth-1" %} {% include figure.liquid loading="eager" path="assets/img/hiking/uxbridge/5.jpg" class="img-fluid rounded z-depth-1" %}
+<swiper-container keyboard="true" navigation="true" pagination="true" pagination-clickable="true" pagination-dynamic-bullets="true" rewind="true">
+  <swiper-slide>{% include figure.liquid loading="eager" path="assets/img/hiking/northwood/1.jpg" class="img-fluid rounded z-depth-1" %}</swiper-slide>
+  <swiper-slide>{% include figure.liquid loading="eager" path="assets/img/hiking/northwood/2.jpg" class="img-fluid rounded z-depth-1" %}</swiper-slide>
+  <swiper-slide>{% include figure.liquid loading="eager" path="assets/img/hiking/northwood/3.jpg" class="img-fluid rounded z-depth-1" %}</swiper-slide>
+  <swiper-slide>{% include figure.liquid loading="eager" path="assets/img/hiking/northwood/4.jpg" class="img-fluid rounded z-depth-1" %}</swiper-slide>
+  <swiper-slide>{% include figure.liquid loading="eager" path="assets/img/hiking/northwood/5.jpg" class="img-fluid rounded z-depth-1" %}</swiper-slide>
+</swiper-container>
 
 Autumn 2024 is shaping up to be the season of hikes — a great opportunity to explore the more rural parts of London.
 Today, I joined a couple of friends for a hike in Northwest London.
