--- a/_posts/2024-08-17-pen-y-fan.md
+++ b/_posts/2024-08-17-pen-y-fan.md
@@ -6,6 +6,9 @@ description:
 tags:
 categories: hikes
 tabs: true
+images:
+  compare: true
+  slider: true
 ---
 
 <swiper-container keyboard="true" navigation="true" pagination="true" pagination-clickable="true" pagination-dynamic-bullets="true" rewind="true">
