Add selected to bibliography

--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -105,7 +105,7 @@ Conclusion: In this cohort study of {UK} Biobank participants, a higher daily st
   abstract = {Existing activity tracker datasets for human activity recognition are typically obtained by having participants perform predefined activities in an enclosed environment under supervision. This results in small datasets with a limited number of activities and heterogeneity, lacking the mixed and nuanced movements normally found in free-living scenarios. As such, models trained on laboratory-style datasets may not generalise out of sample. To address this problem, we introduce a new dataset involving wrist-worn accelerometers, wearable cameras, and sleep diaries, enabling data collection for over 24 hours in a free-living setting. The result is CAPTURE-24, a large activity tracker dataset collected in the wild from 151 participants, amounting to 3883 hours of accelerometer data, of which 2562 hours are annotated. CAPTURE-24 is two to three orders of magnitude larger than existing publicly available datasets, which is critical to developing accurate human activity recognition models.},
   issue = {1},
   langid = {english},
-  file = {C:\Users\lina3815\Zotero\storage\WUJ7VEBI\Chan et al. - 2024 - CAPTURE-24 A large dataset of wrist-worn activity.pdf}
+  selected={true}
 }
 
 @article{small2024,
@@ -119,5 +119,6 @@ Conclusion: In this cohort study of {UK} Biobank participants, a higher daily st
   issn = {0195-9131},
   url = {https://journals.lww.com/acsm-msse/fulltext/2024/10000/self_supervised_machine_learning_to_characterize.9.aspx},
   abstract = {Purpose  Step count is an intuitive measure of physical activity frequently quantified in health-related studies; however, accurate step counting is difficult in the free-living environment, with error routinely above 20\% in wrist-worn devices against camera-annotated ground truth. This study aimed to describe the development and validation of step count derived from a wrist-worn accelerometer and assess its association with cardiovascular and all-cause mortality in a large prospective cohort. Methods We developed and externally validated a self-supervised machine learning step detection model, trained on an open-source and step-annotated free-living dataset. Thirty-nine individuals will free-living ground-truth annotated step counts were used for model development. An open-source dataset with 30 individuals was used for external validation. Epidemiological analysis was performed using 75,263 UK Biobank participants without prevalent cardiovascular disease (CVD) or cancer. Cox regression was used to test the association of daily step count with fatal CVD and all-cause mortality after adjustment for potential confounders. Results The algorithm substantially outperformed reference models (free-living mean absolute percent error of 12.5\% vs 65\%–231\%). Our data indicate an inverse dose–response association, where taking 6430–8277 daily steps was associated with 37\% (25\%–48\%) and 28\% (20\%–35\%) lower risk of fatal CVD and all-cause mortality up to 7 yr later, compared with those taking fewer steps each day. Conclusions We have developed an open and transparent method that markedly improves the measurement of steps in large-scale wrist-worn accelerometer datasets. The application of this method demonstrated expected associations with CVD and all-cause mortality, indicating excellent face validity. This reinforces public health messaging for increasing physical activity and can help lay the groundwork for the inclusion of target step counts in future public health guidelines.},
-  keywords = {ACTIVITY,CADENCE,MACHINE LEARNING,MORTALITY,STEP DETECTION,VALIDATION}
+  keywords = {ACTIVITY,CADENCE,MACHINE LEARNING,MORTALITY,STEP DETECTION,VALIDATION},
+  selected={true}
 }
