--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -4,44 +4,29 @@
 @article{acquah_daily_2024,
   abbr={MedRxiv},
   title={Daily steps are a predictor of, but perhaps not a modifiable risk factor for Parkinson's Disease: findings from the UK Biobank},
-  author={Acquah, Aidan and Small, Scott R. and Chan, Shing and Harper, Charlie and von Fritsch, Lennart and Clifton, David A. and Doherty†, Aiden},
+  author={Acquah, Aidan and Small, Scott R. and Chan, Shing and Harper, Charlie and von Fritsch, Lennart and Clifton, David A. and Doherty, Aiden},
   journal={medRxiv},
   year={2024},
   month={Aug},
   doi={10.1101/2024.08.13.24311539},
   url={http://medrxiv.org/content/early/2024/08/14/2024.08.13.24311539.abstract},
   html={http://medrxiv.org/content/early/2024/08/14/2024.08.13.24311539.abstract},
-  abstract = {Importance 
-  
-  Higher physical activity levels have been suggested as a potential modifiable risk factor for lowering the risk of incident Parkinson's disease ({PD}). This study uses objective measures of physical activity to investigate the role of reverse causation in the observed association.
-  
+  abstract={Importance 
+  Higher physical activity levels have been suggested as a potential modifiable risk factor for lowering the risk of incident Parkinson's disease (PD). This study uses objective measures of physical activity to investigate the role of reverse causation in the observed association.
   Objective 
-  
-  To investigate the association between accelerometer-derived daily step count and incident {PD}, and to assess the impact of reverse causation on this association.
-  
+  To investigate the association between accelerometer-derived daily step count and incident PD, and to assess the impact of reverse causation on this association.
   Design 
-  
-  This prospective cohort study involved a follow-up period with a median duration of 7.9 years, with participants who wore wrist-worn accelerometers for up to 7 days.Setting The study was conducted within the {UK} Biobank, a large, population-based cohort.
-  
+  This prospective cohort study involved a follow-up period with a median duration of 7.9 years, with participants who wore wrist-worn accelerometers for up to 7 days. The study was conducted within the UK Biobank, a large, population-based cohort.
   Participants 
-  
-  The analysis included 94,696 participants aged 43-78 years (56\% female) from the {UK} Biobank who provided valid accelerometer data and did not have prevalent {PD}.
-  
+  The analysis included 94,696 participants aged 43-78 years (56% female) from the UK Biobank who provided valid accelerometer data and did not have prevalent PD.
   Exposure 
-  
   Daily step counts were derived using machine learning models to determine the median daily step count over the monitoring period.
-  
   Main Outcomes and Measures
-
-  The primary outcome was incident {PD}, identified through hospital admission and death records. Cox proportional hazards regression models estimated hazard ratios ({HR}) and 95\% confidence intervals ({CI}) for the association between daily step count and incident {PD}, with adjustments for various covariates and evaluation of reverse causation by splitting follow-up periods.
-  
+  The primary outcome was incident PD, identified through hospital admission and death records. Cox proportional hazards regression models estimated hazard ratios (HR) and 95% confidence intervals (CI) for the association between daily step count and incident PD, with adjustments for various covariates and evaluation of reverse causation by splitting follow-up periods.
   Results 
-  
-  During a median follow-up of 7.9 years ({IQR}: 7.4-8.4), 407 incident {PD} cases were identified. An inverse linear association was observed between daily step count and incident {PD}. Participants in the highest quintile of daily steps (\&gt;12,369 steps) had an {HR} of 0.41 (95\% {CI} 0.31-0.54) compared to the lowest quintile (\&lt;6,276 steps; {HR} 1.00; 95\% {CI} 0.84-1.19). A per 1,000 step increase was associated with an {HR} of 0.92 (95\% {CI} 0.89-0.94). However, after excluding the first six years of follow-up, the association was not significant ({HR} 0.96, 95\% {CI} 0.92-1.01).
-  
+  During a median follow-up of 7.9 years (IQR: 7.4-8.4), 407 incident PD cases were identified. An inverse linear association was observed between daily step count and incident PD. Participants in the highest quintile of daily steps (>12,369 steps) had an HR of 0.41 (95% CI 0.31-0.54) compared to the lowest quintile (<6,276 steps; HR 1.00; 95% CI 0.84-1.19). A per 1,000 step increase was associated with an HR of 0.92 (95% CI 0.89-0.94). However, after excluding the first six years of follow-up, the association was not significant (HR 0.96, 95% CI 0.92-1.01).
   Conclusions and Relevance 
-  
-  The observed association between higher daily step count and lower incident {PD} is likely influenced by reverse causation, suggesting changes in physical activity levels occur years before {PD} diagnosis. While step counts may serve as a predictor for {PD}, they may not represent a modifiable risk factor. Further research with extended follow-up periods is warranted to better understand this relationship and account for reverse causation.},
+  The observed association between higher daily step count and lower incident PD is likely influenced by reverse causation, suggesting changes in physical activity levels occur years before PD diagnosis. While step counts may serve as a predictor for PD, they may not represent a modifiable risk factor. Further research with extended follow-up periods is warranted to better understand this relationship and account for reverse causation.},
   selected={true}
 }
 
@@ -59,11 +44,11 @@
   doi={10.1136/annrheumdis-2024-eular.2245},
   url={https://ard.bmj.com/content/83/Suppl_1/1345.1},
   html={https://ard.bmj.com/content/83/Suppl_1/1345.1},
-  abstract={Background: Existing evidence on the association between physical activity and rheumatoid arthritis ({RA}) remains conflicted due to a reliance on self-reported physical activity questionnaires, which are crude and prone to recall bias. Wearable devices, such as accelerometers can continuously and more objectively measure physical activity level.
-Objectives: We aimed to examine the dose-response association between accelerometer-measured daily step count and incident rheumatoid arthritis.
-Methods: This prospective cohort study was based on wrist-worn accelerometer data from the {UK} Biobank, where participants wore a device for seven days. Participants with prevalent inflammatory arthritis ({RA}, psoriatic arthritis or ankylosing spondylitis) were excluded. Daily steps were computed using a validated hybrid self-supervised machine learning step detection algorithm. Physical activity was characterised as median daily step count over a seven-day period, as a continuous measurement, in quarters of steps ({\textless}6818, 6818-9055, 9056-11659, {\textgreater}11659 daily steps) and per 1000 step increase. Incident {RA} cases were identified via record linkage with hospital inpatient data. Cox proportional hazards models were utilised to investigate the association between daily step count and incident {RA} adjusting for sociodemographic and lifestyle factors. Subgroup analyses were conducted to explore the association per 1000 step increase and incident {RA}, stratified by sex, age group (40-49, 50-59, 60-69 and 70-79) and body mass index ({BMI} by categories: {\textless}25, 25-29.9, {\textgreater}30 kg/m2). Sensitivity analyses removing {RA} diagnoses within 2 and 4 years of accelerometer wear and further adjusting for {BMI} were conducted.
-Results: Amongst 91,069 participants aged 62.3 ({SD} 7.8) years and with a median follow-up of 7.9 years, there were 629 incident {RA} cases (87.4 cases per 100,000 person years). Higher median daily step count was associated with lower risk of incident {RA}, and this association was approximately inverse log-linear. Compared to individuals in the lowest quarter ({\textless}6818 daily steps), higher median daily step count was associated with a lower risk of incident {RA}, with individuals in the highest quarter ({\textgreater}11659 daily steps) having a 45\% lower risk of {RA} ({HR} 0.55, [95\% confidence interval [{CI}] 0.44-0.68]) (Figure 1A). There was lower risk of {RA} across both the second (6818-9055 steps) ({HR} 0.77 [0.65-0.95]) and third (9056-11659 steps) ({HR} 0.72 [0.60 – 0.86]) quarters of daily steps when compared to the lowest quarter. Per 1000 increase in steps, we observed a 5\% lower risk of {RA} ({HR} 0.95 [{CI} 0.93-0.97]). Additional analyses where all diagnoses of {RA} within 2 and 4 years of accelerometer wear were removed and addition of {BMI} into the primary model had little impact on the associations. In subgroup analyses, a 1000 step increase per day was associated with a lower risk for individuals in the overweight and obese {BMI} categories, age bands 50-59, 60-69 and 70-79 and in females (Figure 1C).
-Conclusion: In this cohort study of {UK} Biobank participants, a higher daily step count was associated with a lower risk of developing {RA}. The findings highlight that even incremental increases in daily steps are associated with a lower risk of {RA}, notably in specific subgroups such as those with higher {BMI}, older age groups, and females. Further studies are needed to explore the association between physical activity and incident {RA} in at-risk individuals.Download figure Open in new tab Download powerpoint Figures 1A and 1B. Association of accelerometer-measured median daily step count as (A) quarters of steps and (B) continuous steps with risk of incident {RA}.Figure 1C. Association per 1000 increase in accelerometer-measured median daily steps with risk of incident {RA}, stratified by different subgroups.All models were adjusted for sex, ethnicity, smoking status, alcohol consumption, deprivation, education, red and processed meat consumption and fruit and vegetable consumption.},
+  abstract={Background: Existing evidence on the association between physical activity and rheumatoid arthritis (RA) remains conflicted due to a reliance on self-reported physical activity questionnaires, which are crude and prone to recall bias. Wearable devices, such as accelerometers can continuously and more objectively measure physical activity level.
+  Objectives: We aimed to examine the dose-response association between accelerometer-measured daily step count and incident rheumatoid arthritis.
+  Methods: This prospective cohort study was based on wrist-worn accelerometer data from the UK Biobank, where participants wore a device for seven days. Participants with prevalent inflammatory arthritis (RA, psoriatic arthritis or ankylosing spondylitis) were excluded. Daily steps were computed using a validated hybrid self-supervised machine learning step detection algorithm. Physical activity was characterised as median daily step count over a seven-day period, as a continuous measurement, in quarters of steps (<6818, 6818-9055, 9056-11659, >11659 daily steps) and per 1000 step increase. Incident RA cases were identified via record linkage with hospital inpatient data. Cox proportional hazards models were utilised to investigate the association between daily step count and incident RA adjusting for sociodemographic and lifestyle factors. Subgroup analyses were conducted to explore the association per 1000 step increase and incident RA, stratified by sex, age group (40-49, 50-59, 60-69 and 70-79) and body mass index (BMI by categories: <25, 25-29.9, >30 kg/m2). Sensitivity analyses removing RA diagnoses within 2 and 4 years of accelerometer wear and further adjusting for BMI were conducted.
+  Results: Amongst 91,069 participants aged 62.3 (SD 7.8) years and with a median follow-up of 7.9 years, there were 629 incident RA cases (87.4 cases per 100,000 person years). Higher median daily step count was associated with lower risk of incident RA, and this association was approximately inverse log-linear. Compared to individuals in the lowest quarter (<6818 daily steps), higher median daily step count was associated with a lower risk of incident RA, with individuals in the highest quarter (>11659 daily steps) having a 45% lower risk of RA (HR 0.55, [95% confidence interval [CI] 0.44-0.68]) (Figure 1A). There was lower risk of RA across both the second (6818-9055 steps) (HR 0.77 [0.65-0.95]) and third (9056-11659 steps) (HR 0.72 [0.60 – 0.86]) quarters of daily steps when compared to the lowest quarter. Per 1000 increase in steps, we observed a 5% lower risk of RA (HR 0.95 [CI 0.93-0.97]). Additional analyses where all diagnoses of RA within 2 and 4 years of accelerometer wear were removed and addition of BMI into the primary model had little impact on the associations. In subgroup analyses, a 1000 step increase per day was associated with a lower risk for individuals in the overweight and obese BMI categories, age bands 50-59, 60-69 and 70-79 and in females (Figure 1C).
+  Conclusion: In this cohort study of UK Biobank participants, a higher daily step count was associated with a lower risk of developing RA. The findings highlight that even incremental increases in daily steps are associated with a lower risk of RA, notably in specific subgroups such as those with higher BMI, older age groups, and females. Further studies are needed to explore the association between physical activity and incident RA in at-risk individuals.},
   selected={true}
 }
 
@@ -81,44 +66,45 @@ Conclusion: In this cohort study of {UK} Biobank participants, a higher daily st
   doi={10.1038/s41746-024-01062-3},
   url={https://www.nature.com/articles/s41746-024-01062-3},
   html={https://www.nature.com/articles/s41746-024-01062-3},
-  abstract = {Accurate physical activity monitoring is essential to understand the impact of physical activity on one's physical health and overall well-being. However, advances in human activity recognition algorithms have been constrained by the limited availability of large labelled datasets. This study aims to leverage recent advances in self-supervised learning to exploit the large-scale {UK} Biobank accelerometer dataset—a 700,000 person-days unlabelled dataset—in order to build models with vastly improved generalisability and accuracy. Our resulting models consistently outperform strong baselines across eight benchmark datasets, with an F1 relative improvement of 2.5–130.9\% (median 24.4\%). More importantly, in contrast to previous reports, our results generalise across external datasets, cohorts, living environments, and sensor devices. Our open-sourced pre-trained models will be valuable in domains with limited labelled data or where good sampling coverage (across devices, populations, and activities) is hard to achieve.},
+  abstract={Accurate physical activity monitoring is essential to understand the impact of physical activity on one's physical health and overall well-being. However, advances in human activity recognition algorithms have been constrained by the limited availability of large labelled datasets. This study aims to leverage recent advances in self-supervised learning to exploit the large-scale UK Biobank accelerometer dataset—a 700,000 person-days unlabelled dataset—in order to build models with vastly improved generalisability and accuracy. Our resulting models consistently outperform strong baselines across eight benchmark datasets, with an F1 relative improvement of 2.5–130.9% (median 24.4%). More importantly, in contrast to previous reports, our results generalise across external datasets, cohorts, living environments, and sensor devices. Our open-sourced pre-trained models will be valuable in domains with limited labelled data or where good sampling coverage (across devices, populations, and activities) is hard to achieve.},
   keywords={Diagnostic markers, Epidemiology, Computer science},
   selected={true}
 }
 
 @article{chan2024,
-  abbr = {Nature Sci Data},
-  title = {{{CAPTURE-24}}: {{A}} Large Dataset of Wrist-Worn Activity Tracker Data Collected in the Wild for Human Activity Recognition},
-  shorttitle = {{{CAPTURE-24}}},
-  author = {Chan, Shing and Hang, Yuan and Tong, Catherine and Acquah, Aidan and Schonfeldt, Abram and Gershuny, Jonathan and Doherty, Aiden},
-  date = {2024-10-16},
-  journaltitle = {Scientific Data},
-  shortjournal = {Sci Data},
-  volume = {11},
-  number = {1},
-  pages = {1--11},
-  publisher = {Nature Publishing Group},
-  issn = {2052-4463},
-  doi = {10.1038/s41597-024-03960-3},
-  url = {https://www.nature.com/articles/s41597-024-03960-3},
-  urldate = {2024-10-23},
-  abstract = {Existing activity tracker datasets for human activity recognition are typically obtained by having participants perform predefined activities in an enclosed environment under supervision. This results in small datasets with a limited number of activities and heterogeneity, lacking the mixed and nuanced movements normally found in free-living scenarios. As such, models trained on laboratory-style datasets may not generalise out of sample. To address this problem, we introduce a new dataset involving wrist-worn accelerometers, wearable cameras, and sleep diaries, enabling data collection for over 24 hours in a free-living setting. The result is CAPTURE-24, a large activity tracker dataset collected in the wild from 151 participants, amounting to 3883 hours of accelerometer data, of which 2562 hours are annotated. CAPTURE-24 is two to three orders of magnitude larger than existing publicly available datasets, which is critical to developing accurate human activity recognition models.},
-  issue = {1},
-  langid = {english},
+  abbr={Nature Sci Data},
+  title={CAPTURE-24: A Large Dataset of Wrist-Worn Activity Tracker Data Collected in the Wild for Human Activity Recognition},
+  author={Chan, Shing and Hang, Yuan and Tong, Catherine and Acquah, Aidan and Schonfeldt, Abram and Gershuny, Jonathan and Doherty, Aiden},
+  year={2024},
+  month={October},
+  journal={Scientific Data},
+  shortjournal={Sci Data},
+  volume={11},
+  number={1},
+  pages={1--11},
+  publisher={Nature Publishing Group},
+  issn={2052-4463},
+  doi={10.1038/s41597-024-03960-3},
+  url={https://www.nature.com/articles/s41597-024-03960-3},
+  urldate={2024-10-23},
+  abstract={Existing activity tracker datasets for human activity recognition are typically obtained by having participants perform predefined activities in an enclosed environment under supervision. This results in small datasets with a limited number of activities and heterogeneity, lacking the mixed and nuanced movements normally found in free-living scenarios. As such, models trained on laboratory-style datasets may not generalise out of sample. To address this problem, we introduce a new dataset involving wrist-worn accelerometers, wearable cameras, and sleep diaries, enabling data collection for over 24 hours in a free-living setting. The result is CAPTURE-24, a large activity tracker dataset collected in the wild from 151 participants, amounting to 3883 hours of accelerometer data, of which 2562 hours are annotated. CAPTURE-24 is two to three orders of magnitude larger than existing publicly available datasets, which is critical to developing accurate human activity recognition models.},
+  issue={1},
+  langid={english},
   selected={true}
 }
 
 @article{small2024,
-  abbr = {Med Sci Sports Exerc},
-  title = {Self-{{Supervised Machine Learning}} to {{Characterize Step Counts}} from {{Wrist-Worn Accelerometers}} in the {{UK Biobank}}},
-  author = {Small, Scott R. and Chan, Shing and Walmsley, Rosemary and von Fritsch, Lennart and Acquah, Aidan and Mertes, Gert and Feakins, Benjamin G. and Creagh, Andrew and Strange, Adam and Matthews, Charles E. and Clifton, David A. and Price, Andrew J. and Khalid, Sara and Bennett, Derrick and Doherty, Aiden},
-  date = {2024},
-  journaltitle = {Medicine \& Science in Sports \& Exercise},
-  volume = {56},
-  number = {10},
-  issn = {0195-9131},
-  url = {https://journals.lww.com/acsm-msse/fulltext/2024/10000/self_supervised_machine_learning_to_characterize.9.aspx},
-  abstract = {Purpose  Step count is an intuitive measure of physical activity frequently quantified in health-related studies; however, accurate step counting is difficult in the free-living environment, with error routinely above 20\% in wrist-worn devices against camera-annotated ground truth. This study aimed to describe the development and validation of step count derived from a wrist-worn accelerometer and assess its association with cardiovascular and all-cause mortality in a large prospective cohort. Methods We developed and externally validated a self-supervised machine learning step detection model, trained on an open-source and step-annotated free-living dataset. Thirty-nine individuals will free-living ground-truth annotated step counts were used for model development. An open-source dataset with 30 individuals was used for external validation. Epidemiological analysis was performed using 75,263 UK Biobank participants without prevalent cardiovascular disease (CVD) or cancer. Cox regression was used to test the association of daily step count with fatal CVD and all-cause mortality after adjustment for potential confounders. Results The algorithm substantially outperformed reference models (free-living mean absolute percent error of 12.5\% vs 65\%–231\%). Our data indicate an inverse dose–response association, where taking 6430–8277 daily steps was associated with 37\% (25\%–48\%) and 28\% (20\%–35\%) lower risk of fatal CVD and all-cause mortality up to 7 yr later, compared with those taking fewer steps each day. Conclusions We have developed an open and transparent method that markedly improves the measurement of steps in large-scale wrist-worn accelerometer datasets. The application of this method demonstrated expected associations with CVD and all-cause mortality, indicating excellent face validity. This reinforces public health messaging for increasing physical activity and can help lay the groundwork for the inclusion of target step counts in future public health guidelines.},
-  keywords = {ACTIVITY,CADENCE,MACHINE LEARNING,MORTALITY,STEP DETECTION,VALIDATION},
+  abbr={Med Sci Sports Exerc},
+  title={Self-Supervised Machine Learning to Characterize Step Counts from Wrist-Worn Accelerometers in the UK Biobank},
+  author={Small, Scott R. and Chan, Shing and Walmsley, Rosemary and von Fritsch, Lennart and Acquah, Aidan and Mertes, Gert and Feakins, Benjamin G. and Creagh, Andrew and Strange, Adam and Matthews, Charles E. and Clifton, David A. and Price, Andrew J. and Khalid, Sara and Bennett, Derrick and Doherty, Aiden},
+  year={2024},
+  month={May},
+  journaltitle={Medicine \& Science in Sports \& Exercise},
+  volume={56},
+  number={10},
+  issn={0195-9131},
+  url={https://journals.lww.com/acsm-msse/fulltext/2024/10000/self_supervised_machine_learning_to_characterize.9.aspx},
+  abstract={Purpose Step count is an intuitive measure of physical activity frequently quantified in health-related studies; however, accurate step counting is difficult in the free-living environment, with error routinely above 20% in wrist-worn devices against camera-annotated ground truth. This study aimed to describe the development and validation of step count derived from a wrist-worn accelerometer and assess its association with cardiovascular and all-cause mortality in a large prospective cohort. Methods We developed and externally validated a self-supervised machine learning step detection model, trained on an open-source and step-annotated free-living dataset. Thirty-nine individuals will free-living ground-truth annotated step counts were used for model development. An open-source dataset with 30 individuals was used for external validation. Epidemiological analysis was performed using 75,263 UK Biobank participants without prevalent cardiovascular disease (CVD) or cancer. Cox regression was used to test the association of daily step count with fatal CVD and all-cause mortality after adjustment for potential confounders. Results The algorithm substantially outperformed reference models (free-living mean absolute percent error of 12.5% vs 65%–231%). Our data indicate an inverse dose–response association, where taking 6430–8277 daily steps was associated with 37% (25%–48%) and 28% (20%–35%) lower risk of fatal CVD and all-cause mortality up to 7 yr later, compared with those taking fewer steps each day. Conclusions We have developed an open and transparent method that markedly improves the measurement of steps in large-scale wrist-worn accelerometer datasets. The application of this method demonstrated expected associations with CVD and all-cause mortality, indicating excellent face validity. This reinforces public health messaging for increasing physical activity and can help lay the groundwork for the inclusion of target step counts in future public health guidelines.},
+  keywords={ACTIVITY, CADENCE, MACHINE LEARNING, MORTALITY, STEP DETECTION, VALIDATION},
   selected={true}
 }
